--- a/index.html
+++ b/index.html
@@ -161,8 +161,41 @@
                   <h3>What's this open source thing I keep hearing about?</h3>
                   <ul>
                     <li class="fragment fade-in">Whilst job hunting I started hearing more about the open source world and was intrigued by it all...but had no idea where to start</li>
-                    <li></li>
+                    <li class="fragment fade-in">In early 2015 I started attending various meetups and meeting like minded people</li>
                   </ul>
+                </section>
+
+                <section>
+                  <h3>Women Hack for Non-Profits</h3>
+                    <ul>
+                      <li class="fragment fade-in">In June 2015 I joined Women Hack for Non-Profits and was soon made the backend lead for one of the projects</li>
+                      <li class="fragment fade-in">As my former life as a Presentation Scheduler gave me many soft skills I was also able to use these skills to help the org grow</li>
+                    </ul>
+                </section>
+
+                <section>
+                  <h3>Acorn Hack</h3>
+                  <img src="https://camo.githubusercontent.com/ea6c5f43cd4d6e8765b8d1cc001ff457e7d25615/687474703a2f2f7777772e6c6f676f67617264656e2e636f6d2f757365725f696d616765732f6c6f676f5f323030353234375f7339397a6a36327332325f7765622e706e67" alt="" />
+                </section>
+
+                <section>
+                    <h3>Draw My Life (EmpowerHack)</h3>
+                    <img src="https://github.com/empowerhack/DrawMyLife-Service/raw/master/app/assets/images/screenshot.png" alt="" />
+                </section>
+
+                <section>
+                  <h1>Technology is the gateway to your dreams</h1>
+                </section>
+
+                <section>
+                    <h3>What's next for Tanya?</h3>
+                    <ul>
+                      <li class="fragment fade-in">My life as a coder has been short, however has been jam packed with various projects, technology and people</li>
+                      <li class="fragment fade-in">Local businesses have started using my services to improve their online presence</li>
+                      <li class="fragment fade-in">In early 2017 I am hoping to launch a personal project to help Black British women find beauty services that are specifically catered for our needs</li>
+                      <li class="fragment fade-in">(but ssshh it's still a secret)</li>
+                      <li class="fragment fade-in">Carry on my day job as a Software Engineer</li>
+                    </ul>
                 </section>
 
                 <section>
